<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_game_selection"
            android:icon="@drawable/ic_baseline_games"
            android:title="@string/game_select" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/dropdown_1" />

        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_baseline_bar"
            android:title="@string/leaderboard" />

    </group>
</menu>