<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_settings"
        android:foregroundGravity="center"
        android:title="@string/action_settings"
        android:iconTintMode="multiply"
        android:iconTint="@color/red"
        app:showAsAction="always"
        >

        <menu>
            <item
                android:id="@+id/action_dropdown1"
                android:title="@string/dropdown_1" />
            <item
                android:id="@+id/action_dropdown2"
                android:title="@string/dropdown_2" />
        </menu>
    </item>

</menu>