<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pixie.android.ui.draw.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_drawing"
        android:name="com.pixie.android.ui.draw.DrawFragment"
        android:label="@string/drawing"
        tools:layout="@layout/draw_fragment" />

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.pixie.android.ui.draw.leaderboard.LeaderboardFragment"
        android:label="@string/leaderboard"
        tools:layout="@layout/leaderboard_layout" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.pixie.android.ui.draw.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/nav_available_games"
        android:name="com.pixie.android.ui.draw.availableGames.AvailableGamesFragment"
        android:label="@string/available_games"
        tools:layout="@layout/available_game_fragment" />

    <fragment
        android:id="@+id/nav_game_selection"
        android:name="com.pixie.android.ui.draw.gameSelection.GameSelectionFragment"
        android:label="@string/game_select"
        tools:layout="@layout/game_selection_fragment" />

    <fragment
        android:id="@+id/nav_game_creation"
        android:name="com.pixie.android.ui.draw.gameCreation.CreateGameFragment"
        android:label="@string/game_creation"
        tools:layout="@layout/create_game_fragment" />

    <fragment
        android:id="@+id/nav_tutorial"
        android:name="com.pixie.android.ui.draw.tutorial.TutorialFragment"
        android:label="@string/tutorial"
        tools:layout="@layout/tutorial_layout" />
    <fragment
        android:id="@+id/nav_tutorial_page2"
        android:name="com.pixie.android.ui.draw.tutorial.TutorialPage2Fragment"
        android:label="@string/tutorial"
        tools:layout="@layout/tutorial_layout_page2" />
    <fragment
        android:id="@+id/nav_tutorial_page3"
        android:name="com.pixie.android.ui.draw.tutorial.TutorialPage3Fragment"
        android:label="@string/tutorial"
        tools:layout="@layout/tutorial_layout_page3" />
    <fragment
        android:id="@+id/nav_tutorial_page4"
        android:name="com.pixie.android.ui.draw.tutorial.TutorialPage4Fragment"
        android:label="@string/tutorial"
        tools:layout="@layout/tutorial_layout_page4" />
    <fragment
        android:id="@+id/nav_tutorial_page5"
        android:name="com.pixie.android.ui.draw.tutorial.TutorialPage5Fragment"
        android:label="@string/tutorial"
        tools:layout="@layout/tutorial_layout_page5" />
    <fragment
        android:id="@+id/nav_tutorial_page6"
        android:name="com.pixie.android.ui.draw.tutorial.TutorialPage6Fragment"
        android:label="@string/tutorial"
        tools:layout="@layout/tutorial_layout_page6" />
</navigation>