<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorSecondary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_virtual"
        android:textStyle="bold"
        android:textSize="@dimen/profile_text"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/channel_name"
            android:text="@string/add_virtual"
            android:textSize="@dimen/profile_text"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>
        <Button
            android:id="@+id/add_virtual_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:textColor="?colorControlHighlight"
            android:text="@string/add"
            android:textSize="15dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_players"
        android:textStyle="bold"
        android:textSize="@dimen/profile_text"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"/>

    <ListView
        android:id="@+id/list_add_player"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>
</LinearLayout>