<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorSecondary">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_channel"
        android:textStyle="bold"
        android:textSize="@dimen/profile_text"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginBottom="50dp">

        <EditText
            android:id="@+id/create_channel_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/channel_name"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>
        <Button
            android:id="@+id/create_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/create"
            android:textSize="15dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_existing_channel"
        android:textStyle="bold"
        android:textSize="@dimen/profile_text"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"/>

    <ListView
        android:id="@+id/list_join_channel"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>




</LinearLayout>