<?xml version="1.0"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?colorAccent"
    android:id="@+id/tutorial_page1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="15dp"
        android:textSize="30dp"
        android:textColor="?colorSecondaryVariant"
        android:text="@string/welcome_tutorial"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:textSize="30dp"
        android:textColor="?colorSecondaryVariant"
        android:text="@string/get_started_exp"
        android:minLines="2"
        android:gravity="center"/>

    <Button
        android:id="@+id/get_started"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:background="@drawable/button_drawable"
        android:textColor="?colorSecondaryVariant"
        android:textSize="@dimen/profile_titles"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>
</LinearLayout>